@@ -1,3 +1,7 @@
+2005-01-12  Max Krasnyansky <maxk@qualcomm.com>
+
+	* skins/rtai/lib/event.c (rt_event_clear): Add missing call.
+
 2005-01-12  Philippe Gerum  <rpm@xenomai.org>
 
 	* skins/rtai: Store the creators's pid of user-space objects so
